--- a/双十一的满减套路.md
+++ b/双十一的满减套路.md
@@ -21,4 +21,6 @@
 为什么商家要做大GMV而不是销售额更不是利润呢？因为平台的投资人只关心GMV，对退货率是不甚关心的。这就给
 商家作假的动力了。
 
-在联想起亚马逊惩罚zhong
+再联想起亚马逊惩罚中国卖家刷评论，天下熙熙，皆为利来，天下嚷嚷，皆为利往。
+
+希望以后还是大家想买啥就买啥，少一点套路，多一点真诚。
