--- a/学习笔记/知识图谱.md
+++ b/学习笔记/知识图谱.md
@@ -1,9 +1,16 @@
 ## 知识图谱
 
-美团关于知识图谱的介绍
 
-#### 
+
+#### 美团关于知识图谱的介绍
 [1] [美团基于知识图谱的剧本杀标准化建设与应用](https://mp.weixin.qq.com/s?__biz=MjM5NjQ5MTI5OA==&mid=2651765197&idx=1&sn=cac02bf6a8cf6a642e307ab53179579f&chksm=bd1260808a65e996692aa59f838c8bdfcf79e02ae340e6ef5d46d3bf5a53fa98c8004f0cbabf&scene=132#wechat_redirect)
 [2] [本地生活综合性需求图谱的构建及应用](https://mp.weixin.qq.com/s?__biz=MjM5NjQ5MTI5OA==&mid=2651763644&idx=1&sn=a05577cca4f9c193d8c085d83f7f432d&chksm=bd126af18a65e3e7cfa3a7be097a4018ab94f8d166dcedcdd22d5c57e54d9b6368a19dd677e2&scene=21#wechat_redirect)
 [3] [常识性概念图谱建设以及在美团场景中的应用](https://mp.weixin.qq.com/s?__biz=MjM5NjQ5MTI5OA==&mid=2651763427&idx=1&sn=b06da2382ffb70bfab0a9ecabe36c540&chksm=bd126bae8a65e2b845a615f5d192d97d027321a9f350caca607ccd696962fb655fbbc73e4b3b&scene=21#wechat_redirect)
 [4] [大众点评搜索基于知识图谱的深度学习排序实践](https://mp.weixin.qq.com/s?__biz=MjM5NjQ5MTI5OA==&mid=2651750220&idx=1&sn=42df36757a7007808c56b53ee6832713&chksm=bd12a6018a652f17de2f66e28ba203bde1e8ae22155687fd3abe73b0336900a855c057e6ad38&scene=21#wechat_redirect)
+[5] [美团大脑：知识图谱的建模方法及其应用](https://mp.weixin.qq.com/s?__biz=MjM5NjQ5MTI5OA==&mid=2651749250&idx=1&sn=6f382206bed8d5e79999a8c957857ba5&chksm=bd12a2cf8a652bd92e9bd226405fd9110a696077a5ec17f08f6be3f699afc5c4873008e923ec&scene=21#wechat_redirect)
+
+#### 知识图谱的具体实践
+[1] [ChainKnowledgeGraph](https://github.com/liuhuanyong/ChainKnowledgeGraph)
+ChainKnowledgeGraph, 产业链知识图谱包括A股上市公司、行业和产品共3类实体，包括上市公司所属行业关系、行业上级关系、产品上游原材料关系、
+产品下游产品关系、公司主营产品、产品小类共6大类。 上市公司4,654家，行业511个，产品95,559条、上游材料56,824条，上级行业480条，下游产
+品390条，产品小类52,937条，所属行业3,946条
