--- a/学习笔记/知识图谱.md
+++ b/学习笔记/知识图谱.md
@@ -14,3 +14,9 @@
 ChainKnowledgeGraph, 产业链知识图谱包括A股上市公司、行业和产品共3类实体，包括上市公司所属行业关系、行业上级关系、产品上游原材料关系、
 产品下游产品关系、公司主营产品、产品小类共6大类。 上市公司4,654家，行业511个，产品95,559条、上游材料56,824条，上级行业480条，下游产
 品390条，产品小类52,937条，所属行业3,946条
+[2] [情报领域](https://github.com/liuhuanyong/QAonMilitaryKG.git)
+QAonMilitaryKG，QaSystem based on military knowledge graph that stores in mongodb which is different 
+from the previous one, 基于mongodb存储的军事领域知识图谱问答项目，
+包括飞行器、太空装备等8大类，100余小类，共计5800项的军事武器知识库，该项目不使用图数据库进行存储，
+通过jieba进行问句解析，问句实体项识别，基于查询模板完成多类问题的查询，主要是提供一种工业界的问答思想demo。
+[3] [医疗领域](https://github.com/liuhuanyong/QASystemOnMedicalKG.git)
